--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gostgas6.github.io/mesto-react/",
+  "homepage": "https://gostgas6.github.io/react-mesto-auth/",
   "dependencies": {
     "cra-template": "1.2.0",
     "@compiled/react": "^0.13.1",
@@ -12,6 +12,7 @@
     "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
